--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -36,5 +36,5 @@ jobs:
 
       - name: Push Docker image to Google Container Registry
         run: |
-          gcloud auth configure-docker --quiet
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/go-api:${{ github.sha }}
+          gcloud auth configure-docker us-west1-docker.pkg.dev
+          docker push us-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_DOCKER_REPOSITORY }}/go-api:${{ github.sha }}
