--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build and tag Docker image
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_DOCKER_REPOSITORY }}/go-api:${{ github.sha }} .
+          docker build -t us-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_DOCKER_REPOSITORY }}/go-api:${{ github.sha }} .
         env:
           GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
 
